--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,15 @@
             </intent-filter>
         </receiver>
 
+        <receiver
+            android:name="com.aiqing.niuniuheardsensor.receivers.HSSystemBroadcastReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.USER_PRESENT" />
+                <action android:name="android.intent.action.SCREEN_OFF" />
+                <action android:name="android.intent.action.SCREEN_ON" />
+            </intent-filter>
+        </receiver>
+
 
         <service android:name=".services.HSService" />
     </application>
