add getui and foregroundservice

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     compile 'com.alibaba:fastjson:1.2.7'
     compile 'com.squareup.okhttp:okhttp:2.7.5'
     compile 'com.android.support:multidex:1.0.0'
+    compile project(':hslib')
     compile 'com.android.support:appcompat-v7:22.2.0'
 }
